# mag-ink-dash-plus

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/: main.py
src/ics_cal/: ics.py  icshelper.py
src/render/: dashboard_template.html  render.py
src/render/css/: styles.css
